[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.23.0"
edition = "2021"
rust-version = "1.88"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "allow"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-evm = { version = "0.23.0", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.23.0", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-eips = { git = "https://github.com/ziren-patches/alloy", branch = "patch-1.0.41", default-features = false }
alloy-consensus = { git = "https://github.com/ziren-patches/alloy", branch = "patch-1.0.41", default-features = false }
# alloy-eips = { path = "../alloy/crates/eips", default-features = false }
# alloy-consensus = { path = "../alloy/crates/consensus", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.4.2" }
alloy-rpc-types-eth = { git = "https://github.com/ziren-patches/alloy", branch = "patch-1.0.41", default-features = false }
alloy-rpc-types-engine = { git = "https://github.com/ziren-patches/alloy", branch = "patch-1.0.41", default-features = false }
# alloy-rpc-types-eth = { path = "../alloy/crates/rpc-types-eth", default-features = false }
# alloy-rpc-types-engine = { path = "../alloy/crates/rpc-types-engine", default-features = false }

# op-alloy
alloy-op-hardforks = { version = "0.4.2" }
op-alloy-consensus = { git = "https://github.com/ziren-patches/op-alloy", branch = "patch-0.22.0", default-features = false }
# op-alloy-consensus = { path = "../op-alloy/crates/consensus", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/ziren-patches/op-alloy", branch = "patch-0.22.0", default-features = false }
# op-alloy-rpc-types-engine = { path = "../op-alloy/crates/rpc-types-engine", default-features = false }

# revm
revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-31.0.2", default-features = false }
op-revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-31.0.2", default-features = false }
# revm = { path = "../revm/crates/revm", default-features = false }
# op-revm = { path = "../revm/crates/op-revm", default-features = false }

# misc
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1"
test-case = "3"

[patch.crates-io]
# revm = { git = "https://github.com/bluealloy/revm", rev = "11b16259" }
# op-revm = { git = "https://github.com/bluealloy/revm", rev = "11b16259" }

#alloy-hardforks = { git = "https://github.com/alloy-rs/hardforks", rev = "0fd230f5aa24c4f6a8c593918b7449df0c20f60a" }
#alloy-op-hardforks = { git = "https://github.com/alloy-rs/hardforks", rev = "0fd230f5aa24c4f6a8c593918b7449df0c20f60a" }