[package]
name = "alloy-evm"
description = "EVM abstraction for Alloy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true

revm.workspace = true
op-revm = { workspace = true, optional = true }
op-alloy-consensus = { workspace = true, optional = true }

auto_impl.workspace = true
derive_more.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
serde_json.workspace = true

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-sol-types/std",
	"derive_more/std",
	"op-revm?/std",
	"thiserror/std",
	"op-alloy-consensus?/std"
]
op = ["op-revm", "op-alloy-consensus"]
